8200290: Scratch buffer creation fails with "assert(!current_thread_in_native()) failed: must not be in native" on SPARC

The code needs to be changed after JDK-8167372 to transition from native.

Reviewed-by: kvn